# some-thing

./: .editorconfig  Cargo.toml  LICENCE-MIT  README.md
.github/workflows/: rust.yml
src/: context.rs  lib.rs  main.rs  markdown.rs  store.rs  tag.rs  tag_set.rs  thing.rs  thing_set.rs  thingtag.rs  thingtag_set.rs
src/cli/: add.rs  build.rs  destroy.rs  init.rs  mod.rs  shell.rs
src/entities/: change.rs  mod.rs  tag.rs  tag_set.rs  thing.rs  thingtag.rs
src/lenses/: licence.rs  mod.rs  package.rs  tag.rs  thing.rs
src/package/: core.rs  mod.rs  resource.rs
src/services/: staging.rs
src/shell/: mod.rs
src/sql/: bootstrap.sql
src/store/: change.rs  mod.rs  tag.rs  thing.rs  thing_tag.rs
