[package]
authors = ["Arnau Siches"]
description = "Something to manage “some” collections"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "some-thing"
repository = "https://github.com/arnau/some-thing"
version = "0.3.0"

[[bin]]
path = "src/main.rs"
name = "some"

[lib]
path = "src/lib.rs"
name = "some"


[dependencies]
ansi_term = "0.12.1"
anyhow = "1.0.65"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "3.2", features = ["derive"] }
csv = "1.1"
directories = "4.0"
pulldown-cmark = { version = "0.9", default-features = false }
reqwest = { version = "0.11", features = ["json", "blocking"] }
rusqlite = { version = "0.28", features = ["bundled", "csvtab"] }
rustyline = "10.0"
scraper = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
skim = "0.9"
thiserror = "1.0"
toml = "0.5"
url = "2.3"
uuid = { version = "1.1", features = ["v4"] }
